# libbrowserid

./: .gitignore  .gitlab-ci.yml  .travis.yml  APKBUILD.in  APKBUILD.in.alpine310  APKBUILD.in.alpine38  AUTHORS  BuildSSP.cmd  COPYING  CVSVersionInfo.txt  CleanSSP.cmd  LICENSE  Makefile.am  Makefile.in  NOTES  NTMakefile  PKGBUILD.in  README  README.md  TODO  accept_sec_context.c  acinclude.m4  aclocal.m4  acquire_cred.c  acquire_cred_with_password.c  add_cred.c  add_cred_with_password.c  autogen.sh  canonicalize_name.c  compare_name.c  config.h.in  configure  configure.ac  context_time.c  delete_name_attribute.c  delete_sec_context.c  display_name.c  display_name_ext.c  display_status.c  duplicate_name.c  (+87 more)
BrowserID.xcodeproj/: .gitignore  project.pbxproj
BrowserID.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BrowserID.xcodeproj/project.xcworkspace/xcshareddata/: BrowserID.xccheckout
BrowserID.xcodeproj/xcshareddata/xcschemes/: BrowserIDFramework.xcscheme  bidcfget.xcscheme  bidcfverify.xcscheme  (+3 more)
CoreFoundation/: CFBridgingPriv.h
bidtool/: .gitignore  Makefile.am  README.md  bidtool.c
build-aux/: compile
contrib/: cyrus-sasl.patch
contrib/BrowserIDHelper/: .gitignore  BrowserIDHelper.m  Info.plist  MailInternal.h  Makefile  README.md  application.sb.diff
contrib/sample/: Makefile  bidget.c
debian/: TODO  changelog  control  control_noshib  copyright  gbp.conf  moonshot-gss-eap-noshib.dirs  rules  rules_noshib
debian/source/: options
doc/: api.md  gss-browserid.md  ios.md  sample.md
eap_example/: Makefile
eapssp/: EapSSP-exports.def  EapSSP-version.rc  NOTES  NTMakefile  README  TODO  config.h  cvslib.pl  gssp.h  gssp_attr.c  gssp_context.c  gssp_cred.c  gssp_credlist.c  gssp_ctxattr.c  gssp_glue.c  gssp_info.c  gssp_init.c  gssp_logon.c  gssp_mem.c  gssp_nego.c  gssp_reauth.c  gssp_stubs.c  gssp_token.c  gssp_trace.c  gssp_user.c  gssp_util.c  ntdll.h  vers_string
gss-sample/: .gitignore  Gss-Misc.h  GssAPI.h  GssClient.c  GssMisc.c  GssServer.c  NTMakefile  ReadMe.Txt
kseceap/: .gitignore  NTMakefile  kseceap.c  kseceap.h  kseceap.inf.in  kseceap.rc.in  sources
libbrowserid/: BrowserID-Info.plist  BrowserID-Prefix.pch  CFBrowserID.h  Makefile.am  NTMakefile  README.md  TODO  bid_acache.c  bid_attrcert.c  bid_authority.c  bid_base32.c  bid_base64.c  bid_cache.c  bid_cf.c  bid_cf.m  bid_cfhttp.c  bid_cfjson.h  bid_cfjson.m  bid_context.c  bid_crypto.c  bid_curlhttp.c  bid_dhparams.c  bid_error.c  bid_fcache.c  bid_identity.c  bid_json.h  bid_json.m  bid_jwt.c  bid_local.c  bid_mcache.c  bid_mshtml.cpp  bid_openssl.c  bid_ppal.c  bid_private.h  bid_rcache.c  bid_reauth.c  bid_remote.c  bid_rgycache.c  bid_rp.c  bid_rverify.c  (+22 more)
libbrowserid/bn/: NTMakefile  bn.h  bn_div.c  bn_lcl.h  bn_lib.c  bn_print.c  cryptlib.h
libbrowserid/tests/: .gitignore  Makefile  bid_acq.c  bid_acq.m  bid_acq_ldr.c  bid_b32.c  bid_b64.c  bid_cf.c  bid_cf.m  bid_doc.c  bid_fct.c  bid_rct.c  bid_sig.c  bid_vfy.c
libcfjson/: Makefile.am  bid_cfjson.m  cfjson.h  cfjson.m
libeap/: Makefile.am  Makefile.in  NTMakefile
libeap/src/crypto/: crypto.h  crypto_cryptoapi.c  crypto_internal.c  crypto_openssl.c  md4-internal.c  md5-internal.c  md5_i.h  tls.h  tls_openssl.c  tls_schannel.c
libeap/src/eap_common/: eap_common.h  eap_defs.h  eap_fast_common.h  eap_gpsk_common.h  eap_ikev2_common.h  eap_pax_common.h  eap_peap_common.h  eap_psk_common.h  eap_pwd_common.h  eap_sake_common.h  eap_sim_common.h  eap_tlv_common.h  eap_ttls.h  eap_wsc_common.h
libeap/src/eap_peer/: eap.h  eap_config.h  eap_i.h  eap_methods.h  eap_tls_common.c  eap_tls_common.h  eap_ttls.c
libeap/src/radius/: radius.h
libeap/src/utils/: common.h  eloop.h  radius_utils.c  radius_utils.h  wpa_debug.c  wpa_debug.h  wpabuf.h
mech_browserid/: .gitignore  AUTHORS  COPYING  Info.plist  Makefile.am  README  README.md  TODO  accept_sec_context.c  acquire_cred.c  acquire_cred_ext.c  acquire_cred_from.c  add_cred.c  add_cred_from.c  authorize_localname.c  canonicalize_name.c  compare_name.c  context_time.c  delete_name_attribute.c  delete_sec_context.c  display_name.c  display_name_ext.c  display_status.c  duplicate_name.c  exchange_meta_data.c  export_cred.c  export_name.c  export_name_composite.c  export_sec_context.c  get_mic.c  get_name_attribute.c  gss_oid.c  gssapiP_bid.h  gssapi_browserid.h  gssbrowserid_err.et  import_cred.c  import_name.c  import_sec_context.c  indicate_mechs.c  init_sec_context.c  (+64 more)
mech_eap/: .gitignore  Makefile.am  Makefile.in  NTMakefile  README  README.samba4  TODO  accept_sec_context.c  acquire_cred.c  acquire_cred_ext.c  acquire_cred_with_password.c  add_cred.c  add_cred_with_password.c  authorize_localname.c  canonicalize_name.c  compare_name.c  context_time.c  delete_name_attribute.c  delete_sec_context.c  dictionary.ukerna  display_name.c  display_name_ext.c  display_status.c  duplicate_name.c  eap_mech.c  exchange_meta_data.c  export_name.c  export_name_composite.c  export_sec_context.c  get_mic.c  get_name_attribute.c  gssapiP_eap.h  gssapi_eap.h  gssapi_headerfix.h  gsseap_err.et  import_name.c  import_sec_context.c  indicate_mechs.c  init_sec_context.c  inquire_attrs_for_mech.c  (+73 more)
mech_eap/win32/: config.h
sample/: .gitignore  Makefile.am  README.md  bidcfget.m  bidcfverify.m  bidget.c  bidverify.c
src/crypto/: md5-non-fips.c
src/eap_common/: eap_common.h  eap_defs.h  eap_ikev2_common.h  eap_sake_common.h  eap_tlv_common.h  eap_ttls.h
src/eap_peer/: eap.h  eap_config.h  eap_i.h  eap_methods.h  eap_tls_common.h
src/utils/: common.h  wpa_debug.h  wpabuf.h
windows/: NTMakefile  NTMakefile.config  NTMakefile.w32  version.rc
windows/assembly/: Moonshot.EapSSP.manifest.in  NTMakefile  policy.Moonshot.EapSSP.in
windows/installer/: NTMakefile  moonshot-eapssp.wxs  moonshot-installer.wxs  moonshot-kseceap.wxs  moonshot-msetup.wxs  moonshot-registry.wxi  moonshot-spinstall.wxs  spinstall-exports.def  spinstall.c
windows/msetup/: NTMakefile  msetup.h  msetup_aaa.c  msetup_cmd.c  msetup_cred.c  msetup_flags.c  msetup_map.c  msetup_reg.c  msetupgui.sln
(+19 files in other folders)
